# paperless-ngx-erechnung

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/paperless_erechnung/: __init__.py  detection.py  extraction.py  parsers.py  rendering.py  thumbnail.py
src/paperless_erechnung/xslt/: README.md
src/paperless_ngx_erechnung/: __init__.py  detection.py  extraction.py  parsers.py  rendering.py  thumbnail.py
src/paperless_ngx_erechnung/xslt/: README.md  VENDORED_VERSION.txt
tests/: conftest.py  test_detection.py  test_extraction.py  test_score_conflict.py  test_xrechnung_parser.py  test_zugferd_parser.py
