[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "paperless-ngx-erechnung"
version = "0.1.0"
description = "German E-Rechnung (XRechnung + ZUGFeRD/Factur-X) parser plugin for Paperless-ngx"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "bitbetter GmbH", email = "info@bitbetter.de" },
    { name = "Moritz Stückler", email = "moritz@bitbetter.de" },
]
maintainers = [
    { name = "Moritz Stückler", email = "moritz@bitbetter.de" },
]
keywords = ["paperless-ngx", "e-rechnung", "xrechnung", "zugferd", "factur-x", "invoice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "lxml>=5.0",
    "pikepdf>=9.0",
    "pypdfium2>=4.0",
    "saxonche>=12.0",
    "Pillow>=10.0",
]
# XSL-FO -> PDF rendering uses Apache FOP, which we shell out to. It's
# installed by the Dockerfile and must be on PATH for local development
# (`brew install fop` / `apt install fop`). Not a Python package, so it
# does not appear in `dependencies` above.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.12",
]

[project.urls]
Homepage = "https://github.com/bitbetterde/paperless-ngx-erechnung"
Issues = "https://github.com/bitbetterde/paperless-ngx-erechnung/issues"

# Paperless-ngx discovers parsers via this entry-point group.
# See paperless/parsers/registry.py in paperless-ngx.
[project.entry-points."paperless_ngx.parsers"]
xrechnung = "paperless_ngx_erechnung.parsers:XRechnungParser"
zugferd = "paperless_ngx_erechnung.parsers:ZUGFeRDParser"

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_ngx_erechnung"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
